# HousePrices

./: Makefile  README.md  Untitled.ipynb  pyproject.toml
docs/: github_release_checklist.md  linkedin_templates.md  model_card.md  notebook_outlines.md  repo_scaffold.md  starter_ideas.md
