[project]
name = "house-prices-kaggle"
version = "0.1.0"
description = "Reproducible baseline for Kaggle House Prices: Advanced Regression Techniques."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]
